manifests/aws-monitor/prod/app.yaml
---
# Source: AWS-Monitor/templates/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aws-monitor-np
  labels:
    
    generator: helm
    name: aws-monitor
spec:
  podSelector:
    matchLabels:
      app: aws-monitor
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 5001
  egress:
  - {}
---
# Source: AWS-Monitor/templates/service.yaml
kind: Service     
apiVersion: v1     
metadata:
  name: aws-monitor-svc
spec:
  selector:
    app: aws-monitor
    
    generator: helm
    name: aws-monitor
  
  type: ClusterIP
  
  ports:         
  - name: http   
    protocol: TCP
    port: 80
    targetPort: 5001

---
# Source: AWS-Monitor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-monitor-deploy
  labels:
    
    generator: helm
    name: aws-monitor
spec:  
  selector: 
    matchLabels:
      app: aws-monitor
      
      generator: helm
      name: aws-monitor
  
  template:
    metadata:
      labels:
        app: aws-monitor
        
        generator: helm
        name: aws-monitor
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
      - name: aws-monitor
        image: sm1986/aws-monitor:1.0.10
        imagePullPolicy: Always

        readinessProbe:
          httpGet:
            path: /
            port: 5001
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket: # validate if pod alive via tcp connection
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 20




        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          privileged: false
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
            ephemeral-storage: "100Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
            ephemeral-storage: "1Gi"
---
# Source: AWS-Monitor/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-monitor-ing
  labels:
    
    generator: helm
    name: aws-monitor
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - path: "/prod(/|$)(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: aws-monitor-svc
              port:
                 number: 80
